added a sidebar to the webpage.

--- a/index.html
+++ b/index.html
@@ -50,25 +50,68 @@
         <!-- </div> -->
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <div class="jumbotron">
-            <h1>From today's featured article</h1>
-            <img src="images/photo1.jpg" alt="Jorge Ben (center) with Trio Mocotó">
-            <p>Fôrça Bruta (Brute Force) is the seventh studio album by Brazilian singer-songwriter and guitarist Jorge Ben, recorded with the Trio Mocotó band (pictured) and released by Philips Records in September 1970. It introduced an acoustic samba-based music that was mellower, moodier, and less ornate than Ben's preceding work. In a largely unrehearsed nighttime recording session, the singer improvised and experimented with unconventional rhythmic arrangements, musical techniques, and elements of soul, funk, and rock. Ben's lyrics explored themes of romantic passion, melancholy, sensuality, and—in a departure from the carefree sensibility of past releases—identity politics and elements of postmodernism. A commercial and critical success, Fôrça Bruta established Ben as a leading artist in Brazil's Tropicália movement and pioneered a sound later known as samba rock. The album's first American release came in 2007, the same year that Rolling Stone Brasil named it the 61st greatest Brazilian music record. (Full article...)
-            <h1>Did you know</h1>
-            <img src="images/photo2.jpg" alt="United States 24-cent stamps with inverted center from 1869">
-            <ul>
-              <li>... that American philatelist William Thorne owned a unique block of four United States 1869 24-cent stamps with an inverted center (pictured) showing the signing of the U.S. Declaration of Independence?</li>
-              <li>... that Ronnie O'Sullivan won the 2017 Masters snooker event, despite breaking his cue tip in his semifinal match?</li>
-              <li>... that Boro Maa created a refugee colony at Thakurnagar for the Matuas, who were displaced due to the 1947 Partition of Bengal?</li>
-              <li>... that Artur Schnabel's recordings of Beethoven's piano sonatas were the first complete recordings ever made of all of the composer's 32 piano sonatas?</li>
-              <li>... that Jon Teske posted a double-double in his first collegiate start and the first collegiate basketball game played at Little Caesars Arena?</li>
-              <li>... that Tobago's Main Ridge is one of the oldest protected areas in the world set aside for conservation, having been created by the British Parliament in 1776?</li>
-              <li>... that a gay former British prince died fighting on the side of Nazi Germany despite loathing Hitler and the Nazi Party?</li>
-              <li>... that Nickey Barclay played with Fanny, Cocker, and Ball?</li>
-          </div>
+        <div class="col-md-3">
+          <p>Main page</p>
+          <p>Contents</p>
+          <p>Featured content</p>
+          <p>Current </p>
+          <p>Random article</p>
+          <p>Donate to Wikipedia</p>
+          <p>Wikipedia store</p>
+          <p>Interaction</p>
+          <p>Help</p>
+          <p>About Wikipedia</p>
+          <p>Community portal</p>
+          <p>Recent changes</p>
+          <p>Contact page</p>
+          <p>Tools</p>
+          <p>What links here</p>
+          <p>Related changes</p>
+          <p>Upload file</p>
+          <p>Special pages</p>
+          <p>Permanent link</p>
+          <p>Page information</p>
+          <p>Wikidata item</p>
+          <p>Print/export</p>
+          <p>Create a book</p>
+          <p>Download as PDF</p>
+          <p>Printable version</p>
+          <p>In other projects</p>
+          <p>Wikimedia Commons</p>
+          <p>MediaWiki</p>
+          <p>Meta-Wiki</p>
+          <p>Wikispecies</p>
+          <p>Wikibooks</p>
+          <p>Wikidata</p>
+          <p>Wikimania</p>
+          <p>Wikinews</p>
+          <p>Wikiquote</p>
+          <p>Wikisource</p>
+          <p>Wikiversity</p>
+          <p>Wikivoyage</p>
+          <p>Wiktionary</p>
         </div>
-      <div class="col-md-6">
+        <div class="col-md-4">
+          <div class="jumbotron">
+            <div class="jumbo1">
+              <h1>From today's featured article</h1>
+              <img src="images/photo1.jpg" alt="Jorge Ben (center) with Trio Mocotó">
+              <p>Fôrça Bruta (Brute Force) is the seventh studio album by Brazilian singer-songwriter and guitarist Jorge Ben, recorded with the Trio Mocotó band (pictured) and released by Philips Records in September 1970. It introduced an acoustic samba-based music that was mellower, moodier, and less ornate than Ben's preceding work. In a largely unrehearsed nighttime recording session, the singer improvised and experimented with unconventional rhythmic arrangements, musical techniques, and elements of soul, funk, and rock. Ben's lyrics explored themes of romantic passion, melancholy, sensuality, and—in a departure from the carefree sensibility of past releases—identity politics and elements of postmodernism. A commercial and critical success, Fôrça Bruta established Ben as a leading artist in Brazil's Tropicália movement and pioneered a sound later known as samba rock. The album's first American release came in 2007, the same year that Rolling Stone Brasil named it the 61st greatest Brazilian music record. (Full article...)
+              <h1>Did you know</h1>
+              <img src="images/photo2.jpg" alt="United States 24-cent stamps with inverted center from 1869">
+              <ul>
+                <li>... that American philatelist William Thorne owned a unique block of four United States 1869 24-cent stamps with an inverted center (pictured) showing the signing of the U.S. Declaration of Independence?</li>
+                <li>... that Ronnie O'Sullivan won the 2017 Masters snooker event, despite breaking his cue tip in his semifinal match?</li>
+                <li>... that Boro Maa created a refugee colony at Thakurnagar for the Matuas, who were displaced due to the 1947 Partition of Bengal?</li>
+                <li>... that Artur Schnabel's recordings of Beethoven's piano sonatas were the first complete recordings ever made of all of the composer's 32 piano sonatas?</li>
+                <li>... that Jon Teske posted a double-double in his first collegiate start and the first collegiate basketball game played at Little Caesars Arena?</li>
+                <li>... that Tobago's Main Ridge is one of the oldest protected areas in the world set aside for conservation, having been created by the British Parliament in 1776?</li>
+                <li>... that a gay former British prince died fighting on the side of Nazi Germany despite loathing Hitler and the Nazi Party?</li>
+                <li>... that Nickey Barclay played with Fanny, Cocker, and Ball?</li>
+              </div>
+            </div>
+          </div>
+      <div class="col-md-5">
         <div class="jumbotron">
           <h1>In the News</h1>
           <img src="images/photo3.jpg" alt="Nursultan Nazarbayev">
